removed unnecessary files

--- a/MovieLibraryAngular/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/MovieLibraryAngular/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -25,16 +25,11 @@
             [routerLinkActive]="['link-active']"
             [routerLinkActiveOptions]="{ exact: true }"
           >
-            <a class="nav-link text-dark" [routerLink]="['/']">Home</a>
+            <a class="nav-link text-dark" [routerLink]="['/']">Movies</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/counter']"
-              >Counter</a
-            >
-          </li>
-          <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/movie']"
-              >Movies</a
+            <a class="nav-link text-dark" [routerLink]="['/movie/upsert']"
+              >CreateMovie</a
             >
           </li>
         </ul>
