--- a/MovieLibraryAngular/ClientApp/src/app/movie-library/components/movie-library-details/movie-library-details.component.html
+++ b/MovieLibraryAngular/ClientApp/src/app/movie-library/components/movie-library-details/movie-library-details.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="display" class="container" style="display: flex;">
+<div class="container" style="display: flex;">
   <div style="width: 50%; margin-right: 50px;">
     <img src="{{movie.imageUrl ?? 'https://media.istockphoto.com/id/1216251206/vector/no-image-available-icon.jpg?b=1&s=170667a&w=0&k=20&c=MiWLEcUdxZONMlnsN_k5OCaz_nLviJB0Hvcz5Wlp5oI='}}" alt="{{movie.title}}" width="500" height="700"/>
   </div>
