--- a/MovieLibraryAngular/ClientApp/src/app/movie-library/components/movie-library-upsert/movie-library-upsert.component.html
+++ b/MovieLibraryAngular/ClientApp/src/app/movie-library/components/movie-library-upsert/movie-library-upsert.component.html
@@ -29,7 +29,7 @@
         Actors:
       </label>
       <select class="form-controlt" id="actors">
-        <option  *ngFor="let option of genreDropdownOptions" [ngValue]="option.value">{{option.text}}</option>
+        <option  *ngFor="let option of actorsDropdownOptions" [ngValue]="option.value">{{option.text}}</option>
       </select>
     </div>
 
