--- a/MovieLibraryAngular/ClientApp/src/app/movie-library/components/movie-library-details/movie-library-details.component.html
+++ b/MovieLibraryAngular/ClientApp/src/app/movie-library/components/movie-library-details/movie-library-details.component.html
@@ -22,7 +22,7 @@
       <div class="col-sm-8">{{actors}}</div><br><br>
       </div>
     <br><br><br>
-    <button type="button" class="btn btn-default">Edit</button>
+    <button type="button" class="btn btn-default" [routerLink]="'/movie/upsert/'+movie.id.toString()">Edit</button>
     <button type="button" class="btn btn-danger">Delete</button>
     </div>
   </div>
