--- a/MovieLibraryAngular/ClientApp/src/app/movie-library/components/movie-library-details/movie-library-details.component.html
+++ b/MovieLibraryAngular/ClientApp/src/app/movie-library/components/movie-library-details/movie-library-details.component.html
@@ -23,7 +23,7 @@
       </div>
     <br><br><br>
     <button type="button" class="btn btn-default" [routerLink]="'/movie/upsert/'+movie.id.toString()">Edit</button>
-    <button type="button" class="btn btn-danger">Delete</button>
+    <button type="button" class="btn btn-danger" (click)="deleteMovie()">Delete</button>
     </div>
   </div>
 
