added pagination to overview component

--- a/MovieLibraryAngular/ClientApp/src/app/movie-library/components/movie-library-overview/movie-library-overview.component.html
+++ b/MovieLibraryAngular/ClientApp/src/app/movie-library/components/movie-library-overview/movie-library-overview.component.html
@@ -1,6 +1,10 @@
 <div class="row">
-  <div *ngFor="let movie of movies" class="col-sm-3">
-    <div class="card">
+  <div style="margin-bottom: 20px" *ngFor="let movie of movies| paginate: {
+              itemsPerPage: pageSize,
+              currentPage: pageNumber,
+              totalItems: totalPages
+            }" class="col-sm-3">
+    <div class="card h-100">
       <div class="card-body">
         <img class="card-img-top" [src]="movie.imageUrl ?? 'https://media.istockphoto.com/id/1216251206/vector/no-image-available-icon.jpg?b=1&s=170667a&w=0&k=20&c=MiWLEcUdxZONMlnsN_k5OCaz_nLviJB0Hvcz5Wlp5oI='" [alt]="movie.title" width="250" height="350"/>
         <h5 class="card-title">{{movie.title}}</h5>
@@ -9,5 +13,10 @@
       </div>
     </div>
   </div>
+  <pagination-controls previousLabel="Prev"
+                       nextLabel="Next"
+                       [responsive]="true"
+                       (pageChange)="getMovies($event)">
+  </pagination-controls>
 </div>
 
