validation and styling

--- a/MovieLibraryAngular/ClientApp/src/app/movie-library/components/actor-form/actor-form.component.css
+++ b/MovieLibraryAngular/ClientApp/src/app/movie-library/components/actor-form/actor-form.component.css
@@ -1,8 +1,11 @@
-.box{
-  display: table-cell;
-  padding-right: 5px;
-}
-.wrapper {
-  display: table;
+.full-width-field {
   width: 100%;
+}
+
+td {
+  padding-right: 8px;
+}
+
+.mat-input-element:disabled {
+  color: black;
 }
