--- a/MovieLibraryAngular/ClientApp/src/app/movie-library/components/movie-form/movie-form.component.html
+++ b/MovieLibraryAngular/ClientApp/src/app/movie-library/components/movie-form/movie-form.component.html
@@ -1,24 +1,47 @@
 <form [formGroup]="movieForm" autocomplete="off">
-  <div class="form-group">
-    <label for="title">Title:</label>
-    <input formControlName="title" id="title" type="text" class="form-control" placeholder="Enter movie title"/>
-  </div>
-  <div class="form-group">
-    <label for="releaseYear">Release Year:</label>
-    <input formControlName="releaseYear" id="releaseYear" type="number" class="form-control" placeholder="Enter release year"/>
-  </div>
-  <div class="form-group">
-    <label for="genreId">Genre:</label>
-    <select id="genreId" name="genreId" formControlName="genreId">
-      <option *ngFor="let genre of genreDropdownOptions" [value]="genre.value">{{genre.text}}</option>
-    </select>
-  </div>
-  <div class="form-group">
-    <label for="rating">Rating:</label>
-    <input formControlName="rating" id="rating" type="number" class="form-control" placeholder="Enter rating"/>
-  </div>
-  <div class="form-group">
-    <label for="description">Description:</label>
-    <textarea formControlName="description" id="description" type="text" class="form-control" placeholder="Enter description"></textarea>
-  </div>
+  <mat-form-field class="full-width-field">
+    <mat-label>Title</mat-label>
+    <input matInput formControlName="title" type="text" placeholder="Enter movie title"/>
+    <mat-error *ngIf="movieTitle?.invalid && movieTitle?.dirty">
+      Title is required
+    </mat-error>
+  </mat-form-field>
+  <table class="full-width-field ">
+    <tr>
+      <td>
+        <mat-form-field class="full-width-field">
+          <mat-label>Release Year</mat-label>
+          <input matInput formControlName="releaseYear" type="number" placeholder="Enter release year"/>
+          <mat-error *ngIf="movieReleaseYear?.invalid && movieReleaseYear?.dirty">
+            Release year is required
+          </mat-error>
+        </mat-form-field>
+      </td>
+      <td>
+        <mat-form-field class="full-width-field">
+          <mat-label>Rating</mat-label>
+          <input matInput formControlName="rating" type="number" placeholder="Enter rating"/>
+          <mat-error *ngIf="movieRating?.invalid && movieRating?.dirty">
+            Rating should be from 1 to 100
+          </mat-error>
+        </mat-form-field>
+      </td>
+      <td>
+        <mat-form-field class="full-width-field">
+          <mat-label>Genre</mat-label>
+          <mat-select formControlName="genreId">
+            <mat-option *ngFor="let genre of genreDropdownOptions" [value]="genre.value">{{genre.text}}</mat-option>
+          </mat-select>
+        </mat-form-field>
+      </td>
+    </tr>
+  </table>
+  <mat-form-field class="full-width-field">
+    <mat-label>Description:</mat-label>
+    <textarea matInput formControlName="description" type="text" placeholder="Enter description"></textarea>
+  </mat-form-field>
+  <mat-form-field class="full-width-field">
+    <mat-label>Image URL:</mat-label>
+    <input matInput formControlName="imageUrl" type="text" placeholder="Enter image URL"/>
+  </mat-form-field>
 </form>
