--- a/MovieLibraryAngular/ClientApp/src/app/movie-library/components/movie-library-overview/movie-library-overview.component.css
+++ b/MovieLibraryAngular/ClientApp/src/app/movie-library/components/movie-library-overview/movie-library-overview.component.css
@@ -1,22 +1,11 @@
-
-.container {
+.card-body {
   display: flex;
-  flex-wrap: wrap;
+  flex-direction: column;
 }
-.parent {
-  display: flex;
-  flex-wrap: wrap;
-}
-.child{
-  /*
-  All you need to do this play with this number (343) according to aviable width and item width
-  Formula: (ParentWidth / 3) - margin (ParentWidth divide by 3 subtracte by margin[if you want e.g in my case i set 10] )
 
-  Stackoverflow Run Code Snippet width = 633.82px (not sure)
-  Margin = 10px
-
-  */
-  flex: 0 0 192px; /* play with this number */
-  background: red;
-  margin: 10px;
+button {
+  margin-top: auto;
+  color: #333C85FF;
+  background: white;
+  border: none;
 }
