--- a/MovieLibraryAngular/ClientApp/src/styles.css
+++ b/MovieLibraryAngular/ClientApp/src/styles.css
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
 /* Provide sufficient contrast against white background */
+@import "~@angular/material/prebuilt-themes/indigo-pink.css";
 a {
   color: #0366d6;
 }
@@ -15,3 +16,7 @@ code {
   border-color: #1861ac;
 }
 
+* {
+  font-family: Raleway /* Replace with your custom font */, sans-serif !important;
+  /* Add !important to overwrite all elements */
+}
