--- a/MovieLibraryAngular/ClientApp/src/app/movie-library/components/shared/actor-form/actor-form.component.html
+++ b/MovieLibraryAngular/ClientApp/src/app/movie-library/components/shared/actor-form/actor-form.component.html
@@ -6,7 +6,7 @@
           <td>
             <mat-form-field class="full-width-field" appearance="fill">
               <mat-label>First Name</mat-label>
-              <input matInput formControlName="firstName" type="text" laceholder="Enter first name"/>
+              <input matInput formControlName="firstName" type="text" placeholder="Enter first name"/>
               <mat-error *ngIf="actorFirstName?.invalid && actorFirstName?.dirty">
                 First name is required
               </mat-error>
