--- a/MovieLibraryAngular/ClientApp/src/app/nav-menu/nav-menu.component.html
+++ b/MovieLibraryAngular/ClientApp/src/app/nav-menu/nav-menu.component.html
@@ -23,14 +23,14 @@
           <li
             class="nav-item"
             [routerLinkActive]="['link-active']"
-            [routerLinkActiveOptions]="{ exact: true }"
-          >
-            <a class="nav-link text-dark" [routerLink]="['/']">Movies</a>
+            [routerLinkActiveOptions]="{ exact: true }">
+            <a class="nav-link text-dark" [routerLink]="['/']">Overview</a>
           </li>
           <li class="nav-item" [routerLinkActive]="['link-active']">
-            <a class="nav-link text-dark" [routerLink]="['/movie/upsert']"
-              >CreateMovie</a
-            >
+            <a class="nav-link text-dark" [routerLink]="['/movie/upsert']">Create</a>
+          </li>
+          <li class="nav-item" [routerLinkActive]="['link-active']">
+            <a class="nav-link text-dark" [routerLink]="['/movie/search']">Search</a>
           </li>
         </ul>
       </div>
