--- a/MovieLibraryAngular/ClientApp/src/app/movie-library/components/movie-library-details/movie-library-details.component.html
+++ b/MovieLibraryAngular/ClientApp/src/app/movie-library/components/movie-library-details/movie-library-details.component.html
@@ -20,7 +20,7 @@
       </tr>
       <tr>
         <td>Genre:</td>
-        <td>{{movie.genreId}}</td>
+        <td>{{genre?.value}}</td>
       </tr>
       <tr>
         <td>Rating:</td>
