--- a/MovieLibraryAngular/ClientApp/src/app/movie-library/components/shared/movie-list/movie-list.component.html
+++ b/MovieLibraryAngular/ClientApp/src/app/movie-library/components/shared/movie-list/movie-list.component.html
@@ -8,7 +8,7 @@
       <div class="card-body d-flex flex-column">
         <img class="card-img-top"
              [src]="movie.imageUrl ?? defaultImageUrl"
-             [alt]="movie.title" width="250" height="350"/>
+             [alt]="movie.title"/>
         <h5 class="card-title">{{movie.title}}</h5>
         <button class="mt-auto" type="button" [routerLink]="'/movie/'+movie.id.toString()">Go to details</button>
       </div>
